tests/snapshots/indent_operations_test__indent_empty_line.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 3

Buffer:
line 1
    [ ]
line 3
