tests/snapshots/indent_operations_test__indent_mixed_content.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:4
Lines: 3

Buffer:
        indented
    no indent
    [ ]       more indent
