tests/snapshots/indent_operations_test__indent_paragraph.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 4

Buffer:
[p]ara line 1
para line 2

next para
