tests/snapshots/indent_operations_test__indent_then_dedent.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
line[ ]1
