tests/snapshots/indent_operations_test__indent_with_existing_tabs.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
    [	]line
