tests/snapshots/indent_operations_test__multiple_indent_undo.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[l]ine 1
